--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -26,6 +26,28 @@ jobs:
         working-directory: SeleniumSelfHealingTests
         run: dotnet build SeleniumSelfHealingTests.sln -c Release --no-restore
 
-      - name: Test
+      - name: Test (with coverage)
         working-directory: SeleniumSelfHealingTests
-        run: dotnet test SeleniumSelfHealingTests.sln -c Release --no-build --verbosity normal
+        run: dotnet test SeleniumSelfHealingTests.sln -c Release --no-build --verbosity normal --logger "trx;LogFileName=TestResults.trx" --collect:"XPlat Code Coverage"
+
+      - name: Install ReportGenerator
+        run: dotnet tool install --global dotnet-reportgenerator-globaltool
+
+      - name: Generate coverage HTML
+        working-directory: SeleniumSelfHealingTests
+        shell: pwsh
+        run: |
+          $results = Get-ChildItem -Recurse -Filter "coverage.cobertura.xml" | Select-Object -First 1
+          reportgenerator -reports $results.FullName -targetdir "CoverageReport" -reporttypes Html
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: SeleniumSelfHealingTests/TestResults
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: SeleniumSelfHealingTests/CoverageReport
